# grafix_toolbox

./: Cargo.toml  LICENSE  README.md  crate.rs  gui.rs  kit.rs
glsl/: inline_shaders.rs  mod.rs  shd_pbrt.glsl  shd_support.glsl
gui/: batch.rs  cache.rs  elements.rs  mod.rs  objects.rs  parts.rs  primitive.rs  render.rs  sugar.rs  surface.rs
gui/elements/: button.rs  hypertext.rs  label.rs  layout.rs  line.rs  lineedit.rs  mod.rs  selector.rs  slider.rs  slider_num.rs  slidernum.rs  text.rs  textedit.rs  util.rs
gui/parts/: frame9.rs  mod.rs  obj.rs  rect.rs  sprite.rs  sprite9.rs  string.rs
gui/primitive/: frame9.rs  rect.rs  sprite.rs  sprite9.rs  text.rs
kit/: mod.rs  opengl.rs  policies.rs
kit/opengl/: buffer.rs  consts_def.rs  context.rs  control.rs  debug.rs  frame.rs  funcs_def.rs  geom.rs  mod.rs  shader.rs  texture.rs  utility.rs
kit/opengl/buffer/: args.rs  format.rs  mapping.rs  mod.rs  vao.rs  vao_args.rs
kit/opengl/context/: event.rs  glfw_impl.rs  offhand.rs  sdl2_impl.rs  window.rs
kit/opengl/control/: consts.rs  error_check.rs  funcs.rs  mod.rs  obj.rs  object.rs  policy.rs  state.rs  tex_state.rs  uniform_state.rs  universion.rs
kit/opengl/frame/: args.rs  fbo.rs  frame.rs  framebuff.rs  mod.rs  screen.rs
kit/opengl/geom/: args.rs  camera.rs  mesh.rs  model.rs  vao.rs
kit/opengl/offhand/: fence.rs  mod.rs
kit/opengl/shader/: args.rs  compiler.rs  mod.rs  object.rs  parsing.rs  program.rs  shader.rs  shader_ext.rs  uniform.rs  uniforms.rs
kit/opengl/texture/: args.rs  format.rs  mod.rs  sampl_pool.rs  sampler.rs  tex_type.rs  texbuff.rs  texture.rs  texture_ext.rs
kit/opengl/thread/: fence.rs
kit/opengl/utility/: font.rs  image.rs  mod.rs  pbrt.rs  pingpong.rs  pyramid.rs  sdf.rs
kit/opengl/utility/geom/: args.rs  camera.rs  mesh.rs  mod.rs  model.rs
kit/opengl/utility/image/: animation.rs  atlas.rs  atlas_pack.rs  loading.rs  serialize.rs  tex_to_img.rs  vtex.rs
kit/opengl/utility/tex/: animation.rs  atlas.rs  atlas_pack.rs  img.rs  mod.rs  serialize.rs  tex_to_img.rs  vtex.rs
kit/policies/: chksum.rs  derives.rs  event.rs  events.rs  file.rs  files.rs  func.rs  index.rs  logging.rs  logging_def.rs  math.rs  memory.rs  mod.rs  pointer.rs  profiling.rs  rand.rs  result.rs  slicing.rs  statics.rs  task.rs  traits.rs  type_tools.rs  types.rs  unsafe_static.rs  window.rs
kit/policies/casts/: bool.rs  cast.rs  func.rs  i128.rs  i32.rs  i8.rs  isize.rs  mod.rs  nalgebra.rs  u16.rs  u32.rs  vector.rs
kit/policies/ext/: cached.rs  cached_str.rs  def.rs  lazy.rs  memoized.rs  mod.rs  n_iter.rs  prefetch.rs  vec.rs
kit/policies/func/: chksum.rs  faster.rs  file.rs  index.rs  log.rs  logger.rs  logging.rs  logging_def.rs  n_iter.rs  rand.rs  range.rs  result.rs  serde.rs  slicing.rs  vec.rs
kit/policies/math/: cast.rs  ext.rs  la.rs  math_ext.rs  mod.rs  tuple.rs
kit/policies/math/cast/: bool.rs  f16.rs  f32.rs  f64.rs  func.rs  i128.rs  i16.rs  i32.rs  i64.rs  i8.rs  isize.rs  matrix.rs  mod.rs  nalgebra.rs  tuples.rs  u128.rs  u16.rs  u32.rs  u64.rs  u8.rs  usize.rs  vector.rs
kit/policies/math/tuple/: apply.rs  args.rs  math.rs  mod.rs  swizzle.rs
kit/policies/types/: arc_slice.rs  cached.rs  cached_str.rs  feed.rs  lazy.rs  lazy_cell.rs  memoized.rs  pointer.rs  prefetch.rs  ver_vec.rs
kit/utility/: cached.rs  coroutine.rs  mod.rs  prefetch.rs  profiling.rs  slicing.rs
kit/utility/ext/: ext.rs  iter.rs  mod.rs  vec.rs
kit/utility/tuple/: apply.rs  mod.rs  swizzle.rs  traits.rs
lib/: mod.rs
lib/opengl/: debug.rs  fence.rs  funcs_def.rs  mod.rs  screen.rs
lib/opengl/buffer/: args.rs  buffer.rs  format.rs  mapping.rs  vao.rs  vao_args.rs
lib/opengl/control/: bindless.rs  consts.rs  error_check.rs  funcs.rs  mod.rs  object.rs  policy.rs  state.rs  tex_state.rs  universion.rs
lib/opengl/frame/: fbo.rs  framebuff.rs
lib/opengl/shader/: args.rs  mod.rs  parsing.rs  shader.rs  uniforms.rs
lib/opengl/texture/: args.rs  format.rs  framebuff.rs  mod.rs  sampl_pool.rs  sampler.rs  tex_type.rs  texbuff.rs  texture.rs
lib/opengl/thread/: mod.rs  offhand.rs
lib/opengl/utility/: camera.rs  font.rs  mesh.rs  mod.rs  model.rs  offhand.rs  pbrt.rs  pingpong.rs  pyramid.rs  sdf.rs
lib/opengl/utility/geom/: camera.rs  mod.rs  model.rs
lib/opengl/utility/tex/: animation.rs  atlas.rs  atlas_pack.rs  fbo.rs  img.rs  mod.rs  serialize.rs  tex_to_img.rs  vtex.rs
lib/policies/: adapters.rs  chksum.rs  derives.rs  events.rs  files.rs  logging.rs  logging_def.rs  math.rs  mod.rs  rand.rs  type_tools.rs  unsafe_once.rs  unsafe_static.rs  window.rs
lib/policies/casts/: cast.rs  f16.rs  f32.rs  f64.rs  func.rs  i128.rs  i16.rs  i32.rs  i64.rs  i8.rs  isize.rs  matrix.rs  mod.rs  nalgebra.rs  result.rs  tuples.rs  u128.rs  u16.rs  u32.rs  u64.rs  u8.rs  usize.rs  vector.rs
lib/utility/: cached_str.rs  ext.rs  mod.rs  prefetch.rs  profiling.rs  slicing.rs  tuple_math.rs
lib/utility/ext/: ext.rs  iter.rs  vec.rs
lib/utility/tuple/: apply.rs  args.rs  math.rs  mod.rs  ops.rs  swizzle.rs  traits.rs
