[package]
name = "grafix-toolbox"
version = "0.8.32"
authors = ["Alexander Drozdoff"]
edition = "2024"
description = "Personal collection of opengl and rust tools, also serving as an functional gui crate. See ./gui/elements for premade gui elements"
license = "MIT"
repository = "https://github.com/installgentoo/grafix_toolbox"
homepage = "https://github.com/installgentoo/grafix_toolbox"

[features]
default = ["gl45", "gui"]
gl45 = []
profiling = []

adv_fs = ["faster-hex", "serde", "grafix-toolbox-macros/serde", "serde_json", "half/serde", "zstd"]
rng = ["fastrand"]
fsnotify = ["notify"]

adv_cg = ["hdr", "obj", "sdf"]
hdr = ["image/hdr"]
obj = ["tobj"]
sdf = ["rusttype"]

adv_img = ["gif", "jpg", "png", "webp", "avif"]
avif = ["image/avif"]
gif = ["image/gif"]
jpg = ["image/jpeg"]
png = ["image/png"]
webp = ["image/webp"]

gui = []

[lib]
name = "grafix_toolbox"
path = "crate.rs"

[dependencies]
grafix-toolbox-macros = "1"
bitflags = "^2"
faster-hex = { version = "^0.10", features = ["std"], default-features = false, optional = true }
fastrand = { version = "^2", optional = true }
futures-lite = { version = "^2", features = ["std"], default-features = false }
gl = "^0.14"
half = "^2"
image = { version = "^0.25", default-features = false }
nalgebra = { version = "^0.34", features = ["std", "serde-serialize"], default-features = false }
notify = { version = "^8", optional = true }
parking_lot = "^0.12"
rusttype = { version = "^0.9", optional = true }
sdl2 = { version = "^0.38", default-features = false }
serde = { version = "^1", features = ["derive"], optional = true }
serde_json = { version = "^1", optional = true }
tobj = { version = "^4", optional = true }
tokio = { version = "^1", features = ["rt-multi-thread", "sync", "io-util", "io-std", "fs", "time"], default-features = false }
tokio-stream = "0.1"
yansi = "^1"
zstd = { version = "^0.13", optional = true }
